--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-strap",
   "description": "AngularStrap - AngularJS directives for Bootstrap",
-  "version": "2.2.1",
+  "version": "2.2.1-rankomat",
   "keywords": [
     "angular",
     "bootstrap"
